# cloud-soc-wazuh-automation

./: .env.example  .gitignore  CHANGE_MANIFEST.md  DEPLOYMENT_FIXES_QUICK_REFERENCE.md  DEPLOYMENT_FIXES_SUMMARY.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  ISSUES_FIXED_DETAILED.md  LICENSE  MIGRATION_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TECHNICAL_ARCHITECTURE_AND_IMPLEMENTATION.md  ansible.cfg  docker-compose.yml  pyproject.toml  rapport.md
.devcontainer/: Dockerfile  devcontainer.json
ansible/: requirements.yml
automation/: isolate_vm.py
cloud_soc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cloudsoc/: README.md  __init__.py  main.py  orchestrator.py
deployment/: victim_server.yml
docker/: Dockerfile  Dockerfile.victim  entrypoint.sh
docker-soc/: README.md  docker-compose.yml  generate-certs.sh  ossec.conf  push-images-to-ecr.sh
docs/: CLI_GUIDE.md  README.md  feature-art-soc-baseline-plan.md  iam-permissions.md  index.md  operational-scenarios.md  s3-ecr-workflow.md
inventory/: generated_hosts.ini
playbooks/: victim_server.yml  wazuh_manager.yml
scripts/: cleanup_repo.sh  run-atomic-attack.sh  ssm-port-forward-wazuh.sh  terraform_cleaner.sh
terraform/: .env  README.md  backend.tf  data.tf  ecr.tf  iam.tf  instance.tf  network.tf  outputs.tf  s3.tf  s3.tf.bak  security_groups.tf  terraform.tfstate  terraform.tfstate.backup  terraform_history_report.sh  terraform_safe_apply.sh  terraform_safe_apply_changelog.json  terraform_safe_apply_changelog.md  terraform_safe_apply_history.json  (+4 more)
(+86 files in other folders)
