[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-soc"
version = "0.1.0"
description = "Cloud-native SOC infrastructure orchestration platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Cloud SOC Team"}
]

keywords = ["terraform", "aws", "soc", "automation", "infra-as-code"]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "boto3>=1.26.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
cloud-soc = "cloudsoc.main:app"

[tool.setuptools]
packages = ["cloudsoc"]

[tool.setuptools.package-data]
cloudsoc = ["config/**/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
